tickettosalesforceplugin/0.12/trunk/src/sforce/objects/Ticket__c.object
<CustomObject>
    <description>$Id$ This is a test.</description>
    <fields>
        <fullName>Cc__c</fullName>
        <label>Cc</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Time__c</fullName>
        <description>Timestamp of last update to ticket.</description>
        <inlineHelpText>Timestamp of last update to ticket.</inlineHelpText>
        <label>Last Update Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter__c</fullName>
        <label>Reporter</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Ticket state.</description>
        <inlineHelpText>Ticket state.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>new</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trac_Ticket_Id__c</fullName>
        <description>Unique record Id in Trac for this ticket.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique record Id in Trac for this ticket.</inlineHelpText>
        <label>Trac Ticket Id</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticket Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>